# prefix

./: .gitignore  AGENTS.md  README.md  implementation_notes.md  pyproject.toml  spinup_workspace.sh  temp.py
cluster/: 1gpu_workspace_start.sh  cpu_workspace_start.sh  get_and_plot_metrics.sh  get_figures.sh  get_metrics.sh  p25gpu_workspace_start copy.sh  p25gpu_workspace_start.sh  pull_metrics.sh  run_figures_1gpu.sh  submit_train.sh
configs/: README.md  ce_1b_seed0_fs5.yaml  ce_seed0_fs1.yaml  ce_seed0_fs5.yaml  ce_seed_0.yaml  ce_seed_0_ws1.yaml  ce_seed_0_ws8.yaml  label_smoothing_seed0_fs1.yaml  label_smoothing_seed0_fs5.yaml  label_smoothing_seed_0.yaml  prefix_norm_eps0p1_1b_seed0_fs5.yaml  prefix_norm_eps0p1_seed0.yaml  prefix_norm_eps0p1_seed0_fs1.yaml  prefix_norm_eps0p1_seed0_fs5.yaml  prefix_norm_eps1p0_seed0.yaml  prefix_norm_eps1p0_seed0_fs1.yaml  prefix_norm_eps1p0_seed0_fs5.yaml  prefix_normalized_tau_0p05_seed_0.yaml  prefix_normalized_tau_0p1_seed_0.yaml  prefix_normalized_tau_0p1_seed_test.yaml  prefix_normalized_tau_0p1_smoke.yaml  prefix_normalized_tau_0p2_seed_0.yaml  prefix_normalized_tau_0p5_seed_0.yaml  prefix_normalized_tau_1p0_seed_0.yaml  prefix_normalized_tau_2p0_seed_0.yaml  prefix_simple_eps0p1_1b_seed0_fs5.yaml  prefix_simple_seed0_fs1.yaml  prefix_simple_seed0_fs5.yaml  prefix_simple_seed_0.yaml  prefix_unnorm_eps0p1_seed0.yaml  prefix_unnorm_eps0p1_seed0_fs1.yaml  prefix_unnorm_eps0p1_seed0_fs5.yaml  prefix_unnorm_eps1p0_1b_seed0_fs5.yaml  prefix_unnorm_eps1p0_seed0.yaml  prefix_unnorm_eps1p0_seed0_fs1.yaml  prefix_unnorm_eps1p0_seed0_fs5.yaml  prefix_unnormalized_tau_0p05_seed_0.yaml  prefix_unnormalized_tau_0p1_seed_0.yaml  prefix_unnormalized_tau_0p2_seed_0.yaml  prefix_unnormalized_tau_0p5_seed_0.yaml  (+5 more)
docs/: checkpointing.md  eval.md  experiments.md  how_to_run.md  notes.md  (+2 more)
(+105 files in other folders)
