[project]
name = "prefix"
version = "0.1.0"
description = "Prefix-aware label smoothing experiments for Llama-3–style LM training"
readme = "README.md"
requires-python = "==3.12.*"
dependencies = [
  "datasets>=2.19",
  "huggingface-hub>=0.36.0",
  "matplotlib>=3.8",
  "mosaicml-streaming>=0.9",
  "pandas>=2.2",
  "pyyaml>=6.0",
  "seaborn>=0.13",
  "transformers>=4.40",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100
